[package]
name = "hyproxy"
version = "0.1.0"
authors = ["Nathan Moos <moosingin3space@gmail.com>"]

[dependencies]
hyper = { "git" = "https://github.com/hyperium/hyper.git" }
error-chain = "0.10"
futures = "0.1"
tokio-core = "0.1"
tokio-service = "0.1"
tokio-proto = "0.1"
tokio-signal = "0.1"
tokio-tls = "0.1"
native-tls = "0.1"
toml = "0.3"
serde = "0.9"
serde_derive = "0.9"
env_logger = "0.4"
log = "0.3"
chrono = "0.3"
regex = "0.2"
